# CGDI-Voxel-Raycasting

./: CMakeLists.txt  CODING_STYLE.md  Doxyfile  LICENSE.txt  README.md
cmake/: geometry-central.cmake  polyscope.cmake
doc/html/: annotated.html  annotated_dup.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  hierarchy.html  hierarchy.js  index.html  menudata.js  navtreedata.js  navtreeindex0.js
doc/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_4.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_10.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  functions_9.js  functions_a.js  functions_c.js  functions_e.js  functions_f.js  related_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  (+2 more)
docs/: annotated.html  annotated_dup.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  globals_type.html  hierarchy.html  hierarchy.js  index.html  menudata.js  navtreedata.js  navtreeindex0.js
docs/d0/d3f/: util_8hpp.html  util_8hpp_source.html
docs/d0/d43/: structVoxelPosition.html  structVoxelPosition.js
docs/d1/d4f/: argparser_8hpp.html  argparser_8hpp.js  argparser_8hpp_source.html
docs/d2/df1/: argparser_8cpp.html  argparser_8cpp.js  argparser_8cpp_source.html
docs/d3/df6/: classMarchingBitmaskAlgorithm.html  classMarchingBitmaskAlgorithm.js
docs/d4/d59/: geometry_8cpp.html  geometry_8cpp_source.html
docs/d4/d8e/: classRayAlgorithm.html  classRayAlgorithm.js
docs/d5/d9b/: scene_8hpp.html  scene_8hpp.js  scene_8hpp_source.html
docs/d5/db5/: ray__algorithm_8hpp.html  ray__algorithm_8hpp.js  ray__algorithm_8hpp_source.html
docs/d5/dcb/: classBitmaskAlgorithm.html  classBitmaskAlgorithm.js
docs/d6/d44/: classVoxel.html  classVoxel.js
docs/d8/d43/: structPoint.html  structPoint.js
docs/d8/da9/: structArgParser.html  structArgParser.js
docs/d9/d4d/: structAABB.html  structAABB.js
docs/d9/dca/: classSlabAlgorithm.html  classSlabAlgorithm.js
docs/d9/dce/: classRay.html  classRay.js
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_4.js  defines_0.js  enums_0.js  files_0.js  files_1.js  files_3.js  files_6.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_6.js  functions_7.js  functions_8.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_f.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js  (+5 more)
include/: argparser.hpp  geometry.hpp  ray.hpp  ray_algorithm.hpp  scene.hpp  util.hpp  voxel.hpp
scripts/: run_benchmarks.sh
scripts/benchmark_plots/: .gitignore  basic_plots.py  compare_slabs.py  gen_everything.sh  gen_plot.py  util.py
scripts/mca_to_json/: README.md  mca_to_json.sh  nbt_to_json.py
src/: argparser.cpp  geometry.cpp  main.cpp  ray.cpp  ray_algorithm.cpp  scene.cpp  util.cpp  voxel.cpp
voxels/: superflat_sandstone_chunk.json  test_world_chunk.json
(+92 files in other folders)
